Optimised Images and Videos

--- a/about/index.html
+++ b/about/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="../assets/img/logo-nk-favicon.png" rel="icon">
-  <link href="../assets/img/logo-nk-touch-icon.png" rel="apple-touch-icon">
+  <link href="../assets/img/logo-nk-favicon.webp" rel="icon">
+  <link href="../assets/img/logo-nk-touch-icon.webp" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
@@ -61,7 +61,7 @@
     <div class="container">
       <div class="navbar-brand">
         <a href="/">
-          <img class="logo" src="../assets/img/logo-nk.png" width="10%"></a>
+          <img class="logo" src="../assets/img/logo-nk.webp" width="10%"></a>
         </a>
       </div>
       <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
