--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
   <meta property="og:title" content="Navin | Animator">
   <meta property="og:description" content="An independent 2D Animator based in India, loves to bring inanimate objects to
   life with vibrant colors, shapes and motion">
-  <meta property="og:image" content="assets/img/logo-nk-favicon.png">
+  <meta property="og:image" content="assets/img/logo-nk-favicon.webp">
   <meta property="og:image:width" content="30">
   <meta property="og:image:height" content="40">
   <!-- <meta property="og:url" content="https://navinkr.com/"> -->
 
 
   <!-- Favicons -->
-  <link href="assets/img/logo-nk-favicon.png" rel="icon">
-  <link href="assets/img/logo-nk-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/logo-nk-favicon.webp" rel="icon">
+  <link href="assets/img/logo-nk-touch-icon.webp" rel="apple-touch-icon">
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <!-- Google Fonts -->
   <link
@@ -82,7 +82,7 @@
       <div class="container">
         <div class="navbar-brand">
           <a href="/">
-            <img class="logo" src="assets/img/logo-nk.png"></a>
+            <img class="logo" src="assets/img/logo-nk.webp"></a>
         </div>
         <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
           <span></span>
@@ -105,7 +105,7 @@
                   <h2>Demo Reel</h2>
                   <!-- <span>2022</span> -->
                 </div>
-                <img class="img-fluid" src="assets/img/Reel Thumbnail.jpg">
+                <img class="img-fluid" src="assets/img/Reel Thumbnail.webp">
               </a>
             </div>
           </div>
@@ -127,11 +127,11 @@
 
         <!--Committed Changes on 22-08-2023-->
         <div class="box" data-aos="fade-up" data-aos-delay="200">
-          <button class="tablink" onclick="openPage('AI', this, '#323946')"><img src="assets/img/robot.png"
+          <button class="tablink" onclick="openPage('AI', this, '#323946')"><img src="assets/img/robot.webp"
               class="pic"><span class="text">&nbsp&nbspAI Art</span></button>
           <button class="tablink" onclick="openPage('Animation', this, '#323946')" id="defaultOpen"><img
-              src="assets/img/animation_pic.png" class="pic"><span class="text">&nbsp&nbspAnimation</span></button>
-          <button class="tablink" onclick="openPage('Video', this, '#323946')"><img src="assets/img/video_edit.png"
+              src="assets/img/animation_pic.webp" class="pic"><span class="text">&nbsp&nbspAnimation</span></button>
+          <button class="tablink" onclick="openPage('Video', this, '#323946')"><img src="assets/img/video_edit.webp"
               class="pic"><span class="text">&nbsp&nbspVideo Editing</span></button>
           <!-- id="btn1" -->
           <div id="AI" class="tabcontent">
@@ -242,7 +242,7 @@
                   <div class="work-info">
                     <h3>Secrets of Serpents</h3>
                   </div>
-                  <img class="img-fluid" src="assets/img/serpents.jpg">
+                  <img class="img-fluid" src="assets/img/serpents.webp">
                 </a>
               </div>
               <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -250,7 +250,7 @@
                   <div class="work-info">
                     <h3>Power of Dreams</h3>
                   </div>
-                  <img class="img-fluid" src="assets/img/dreams.jpg">
+                  <img class="img-fluid" src="assets/img/dreams.webp">
                 </a>
               </div>
               <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -258,7 +258,7 @@
                   <div class="work-info">
                     <h3>Sadhguru meets Wrestlers</h3>
                   </div>
-                  <img class="img-fluid" src="assets/img/wrestling.jpg">
+                  <img class="img-fluid" src="assets/img/wrestling.webp">
                 </a>
               </div>
               <div class="item design col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -266,7 +266,7 @@
                   <div class="work-info">
                     <h3>Are Geniuses Born or Made?</h3>
                   </div>
-                  <img class="img-fluid" src="assets/img/Beethoven.jpg">
+                  <img class="img-fluid" src="assets/img/Beethoven.webp">
                 </a>
               </div>
               <div class="item photography col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -274,7 +274,7 @@
                   <div class="work-info">
                     <h3>A Walk for Soil</h3>
                   </div>
-                  <img class="img-fluid" src="assets/img/A Walk for Soil.png">
+                  <img class="img-fluid" src="assets/img/A Walk for Soil.webp">
                 </a>
               </div>
               <div class="item branding col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -282,7 +282,7 @@
                   <div class="work-info">
                     <h3>Save Soil</h3>
                   </div>
-                  <img class="img-fluid" src="assets/img/Save Soil (16-9).png">
+                  <img class="img-fluid" src="assets/img/Save Soil (16-9).webp">
                 </a>
               </div>
             </div>
@@ -304,7 +304,7 @@
             <div class="swiper-slide">
               <div class="testimonial-wrap">
                 <div class="testimonial">
-                  <img src="assets/img/mihir_gosavi.jpg" alt="Image" class="img-fluid">
+                  <img src="assets/img/mihir_gosavi.webp" alt="Image" class="img-fluid">
                   <p>Navin is an amazing personality. He is an extraordinary blend of creativity and technical
                     expertise. From stunning 2D artistry to innovative AI-driven designs and captivating motion
                     graphics, his versatility stands out. Truly, a powerhouse of talent redefining the creative
