--- a/reel/index.html
+++ b/reel/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="../assets/img/logo-nk-favicon.png" rel="icon">
-  <link href="../assets/img/logo-nk-touch-icon.png" rel="apple-touch-icon">
+  <link href="../assets/img/logo-nk-favicon.webp" rel="icon">
+  <link href="../assets/img/logo-nk-touch-icon.webp" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -57,7 +57,7 @@
     <div class="container">
         <div class="navbar-brand">
           <a href="/">
-          <img class="logo" src="../assets/img/logo-nk.png"></a>
+          <img class="logo" src="../assets/img/logo-nk.webp"></a>
         </div>
         <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
           <span></span>
