Added Website Analytics

--- a/animation/project-5/index.html
+++ b/animation/project-5/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PZ2RYEKKDL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-PZ2RYEKKDL');
+  </script>
+
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -14,7 +24,9 @@
   <link href="/assets/img/logo-nk-touch-icon.webp" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="/assets/vendor/aos/aos.css" rel="stylesheet">
@@ -42,7 +54,8 @@
       <div class="row">
         <div class="col-md-5 d-none d-md-block">
           <h3>Hire Me</h3>
-          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe, storyboard/sketches, NDA)<br><a href="mailto:navinkrworks@gmail.com">navinkrworks@gmail.com</a></p>
+          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe,
+            storyboard/sketches, NDA)<br><a href="mailto:navinkrworks@gmail.com">navinkrworks@gmail.com</a></p>
         </div>
         <div class="col-md-7">
           <ul class="custom-menu">
@@ -56,13 +69,13 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-        <div class="navbar-brand">
-          <a href="/">
+      <div class="navbar-brand">
+        <a href="/">
           <img class="logo" src="/assets/img/logo-nk.webp"></a>
-        </div>
-        <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
-          <span></span>
-        </a>
+      </div>
+      <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
+        <span></span>
+      </a>
     </div>
   </nav>
 
@@ -82,7 +95,9 @@
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
               <div class="video-container">
-                <iframe src="https://player.vimeo.com/video/961408879?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                <iframe
+                  src="https://player.vimeo.com/video/961408879?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+                  width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
               </div>
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
@@ -113,14 +128,14 @@
     <section class="section pt-3 pb-3">
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
-            <h3 class="h3 heading">Brief / Concept</h3>
-            <p>I created this treasure box logo animation as part of a challenge organized by Primecraft Games. 
-                It was a really fun time with lots of learning. I used Spine software for the treasure box animation, 
-                After Effects for the particles, and Premiere Pro for editing.</p>
+          <h3 class="h3 heading">Brief / Concept</h3>
+          <p>I created this treasure box logo animation as part of a challenge organized by Primecraft Games.
+            It was a really fun time with lots of learning. I used Spine software for the treasure box animation,
+            After Effects for the particles, and Premiere Pro for editing.</p>
         </div>
       </div>
     </section><!-- End Brief Concept Section -->
-    
+
     <!-- ======= Previous/Next Section ======= -->
     <div class="container py-2 py-md-5">
       <div class="row">
@@ -155,7 +170,8 @@
     </div>
   </footer>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="/assets/vendor/aos/aos.js"></script>
