--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PZ2RYEKKDL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-PZ2RYEKKDL');
+  </script>
+
+  
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -34,7 +45,7 @@
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="assets/css/spine-player.css">
+  <link rel="stylesheet" href="assets/css/spine-player.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <!-- Template Main CSS File -->
@@ -321,7 +332,11 @@
               <div class="testimonial-wrap">
                 <div class="testimonial">
                   <img src="assets/img/Shubhangi Wakodikar.webp" alt="Image" class="img-fluid">
-                  <p>Navin is an exceptionally talented video designer. His creative capabilities help put forth the message in a fun manner to all age groups of audience. With his foresight, he brings forth the best in people through his animations and helps push limits, thereby helping achieve his team's goals. He is a great team player, looking out for his colleagues. Given a chance to work again with Navin, I would jump at the opportunity. He is an asset to any team that he may work in.</p>
+                  <p>Navin is an exceptionally talented video designer. His creative capabilities help put forth the
+                    message in a fun manner to all age groups of audience. With his foresight, he brings forth the best
+                    in people through his animations and helps push limits, thereby helping achieve his team's goals. He
+                    is a great team player, looking out for his colleagues. Given a chance to work again with Navin, I
+                    would jump at the opportunity. He is an asset to any team that he may work in.</p>
                   <blockquote>
                     <p>&mdash; Shubhangi Wakodikar</p>
                   </blockquote>
