--- a/reel/index.html
+++ b/reel/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PZ2RYEKKDL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-PZ2RYEKKDL');
+  </script>
+  
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -14,7 +24,9 @@
   <link href="../assets/img/logo-nk-touch-icon.webp" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
@@ -41,7 +53,8 @@
       <div class="row">
         <div class="col-md-5 d-none d-md-block">
           <h3>Hire Me</h3>
-          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe, storyboard/sketches, NDA)<br><a href="mailto:navinkrworks@gmail.com">navinkrworks@gmail.com</a></p>
+          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe,
+            storyboard/sketches, NDA)<br><a href="mailto:navinkrworks@gmail.com">navinkrworks@gmail.com</a></p>
         </div>
         <div class="col-md-7">
           <ul class="custom-menu">
@@ -55,13 +68,13 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-        <div class="navbar-brand">
-          <a href="/">
+      <div class="navbar-brand">
+        <a href="/">
           <img class="logo" src="../assets/img/logo-nk.webp"></a>
-        </div>
-        <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
-          <span></span>
-        </a>
+      </div>
+      <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
+        <span></span>
+      </a>
     </div>
   </nav>
 
@@ -72,23 +85,26 @@
       <div class="container">
         <div class="item web col-sm-12 col-md-12 col-lg-12 mb-0" data-aos="fade-up">
           <div class="video-container">
-            <iframe src="https://player.vimeo.com/video/601745167" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+            <iframe src="https://player.vimeo.com/video/601745167" width="640" height="564" frameborder="0"
+              allow="autoplay; fullscreen" allowfullscreen></iframe>
           </div>
         </div>
         <div class="row mt-5 align-items-end" data-aos="fade-up">
-          <p>I am very grateful to all the amazing people for awesome opportunities which leads to this beautiful reel. These are some of my favourite shots. Thank you to everyone who always supported me.</p>
+          <p>I am very grateful to all the amazing people for awesome opportunities which leads to this beautiful reel.
+            These are some of my favourite shots. Thank you to everyone who always supported me.</p>
         </div>
       </div>
       <div class="container" data-aos="fade-up">
         <div class="row1 align-items-end">
-            <p>• 00:00 - 00:07 : Design and Animation
+          <p>• 00:00 - 00:07 : Design and Animation
             <br>• 00:08 - 00:20 : Character Rigging and Animation
             <br>• 00:21 - 00:22 : Design and Animation
             <br>• 00:23 - 00:26 : Animation
             <br>• 00:27 - 00:29 : Design and Animation
             <br>• 00:30 - 00:33 : Animation
             <br>• 00:34 - 00:36 : Design and Animation
-            <br>• 00:37 - 00:41 : Character Rigging and Animation</p>
+            <br>• 00:37 - 00:41 : Character Rigging and Animation
+          </p>
         </div>
       </div>
     </section><!-- End Reel Section -->
@@ -113,7 +129,8 @@
     </div>
   </footer>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="../assets/vendor/aos/aos.js"></script>
