--- a/video/project-6/index.html
+++ b/video/project-6/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PZ2RYEKKDL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-PZ2RYEKKDL');
+  </script>
+  
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -91,7 +101,8 @@
           <div class="row align-items-stretch">
             <div class="col-md-5" data-aos="fade-up">
               <div class="shorts" id="save_soil">
-                <iframe src="https://player.vimeo.com/video/906938238?h=03f56f3572" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                <iframe src="https://player.vimeo.com/video/906938238?h=03f56f3572" width="640" height="564"
+                  frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
               </div>
             </div>
             <div class="col" data-aos="fade-up" data-aos-delay="100">
@@ -116,7 +127,7 @@
               }
 
               @media (min-width: 780px) {
-                .col{
+                .col {
                   /* margin-left: 30px; */
                   margin-top: 5px;
                   /* margin-right: 20px; */
