--- a/animation/project-1/index.html
+++ b/animation/project-1/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PZ2RYEKKDL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-PZ2RYEKKDL');
+  </script>
+
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -89,9 +99,9 @@
         <div class="container">
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up">
-                <div class="rive_canvas">
-                  <canvas id="canvas" width="640" height="564"></canvas>
-                </div>
+              <div class="rive_canvas">
+                <canvas id="canvas" width="640" height="564"></canvas>
+              </div>
               <script src="https://unpkg.com/@rive-app/canvas@2.10.3"></script>
               <script>
                 const r = new rive.Rive({
@@ -129,12 +139,12 @@
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
           <h3 class="h3 heading">Brief / Concept</h3>
-            <img src="/assets/img/sage-demo.gif" alt="Sage Demo GIF" class="gif">
+          <img src="/assets/img/sage-demo.gif" alt="Sage Demo GIF" class="gif">
 
-            <p>In the above project, the software that will ultimately load this file doesn’t
-              need to know anything about the design, shapes, or the sequence the animations
-              need to play in. It just tells the Rive graphic that an area was hovered; the visual
-              state machine controls the rest.</p>
+          <p>In the above project, the software that will ultimately load this file doesn’t
+            need to know anything about the design, shapes, or the sequence the animations
+            need to play in. It just tells the Rive graphic that an area was hovered; the visual
+            state machine controls the rest.</p>
         </div>
       </div>
     </section><!-- End Brief Concept Section -->
