--- a/video/project-1/index.html
+++ b/video/project-1/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PZ2RYEKKDL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-PZ2RYEKKDL');
+  </script>
+
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -14,7 +24,9 @@
   <link href="/assets/img/logo-nk-touch-icon.webp" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="/assets/vendor/aos/aos.css" rel="stylesheet">
@@ -42,7 +54,8 @@
       <div class="row">
         <div class="col-md-5 d-none d-md-block">
           <h3>Hire Me</h3>
-          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe, storyboard/sketches, NDA)<br><a href="mailto:navinkrworks@gmail.com">navinkrworks@gmail.com</a></p>
+          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe,
+            storyboard/sketches, NDA)<br><a href="mailto:navinkrworks@gmail.com">navinkrworks@gmail.com</a></p>
         </div>
         <div class="col-md-7">
           <ul class="custom-menu">
@@ -56,13 +69,13 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-        <div class="navbar-brand">
-          <a href="/">
+      <div class="navbar-brand">
+        <a href="/">
           <img class="logo" src="/assets/img/logo-nk.webp"></a>
-        </div>
-        <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
-          <span></span>
-        </a>
+      </div>
+      <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
+        <span></span>
+      </a>
     </div>
   </nav>
 
@@ -73,7 +86,8 @@
         <div class="row mb-4 align-items-center">
           <div class="" data-aos="fade-up">
             <h2>12 Mystical Serpents You Didn’t Know Existed</h2>
-            <p>For the very first time, Sadhguru talks about the lesser-known mystical dimensions of Nagas or the sacred serpents, and their significance in spiritual pursuit and mystical exploration.</p>
+            <p>For the very first time, Sadhguru talks about the lesser-known mystical dimensions of Nagas or the sacred
+              serpents, and their significance in spiritual pursuit and mystical exploration.</p>
           </div>
         </div>
       </div>
@@ -83,7 +97,10 @@
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up" id="video1">
               <div class="video-container">
-                <iframe width="640" height="564" src="https://www.youtube.com/embed/1znhJ4Ulxn8?si=MNk85Nr50dJkApwX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="640" height="564" src="https://www.youtube.com/embed/1znhJ4Ulxn8?si=MNk85Nr50dJkApwX"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen></iframe>
               </div>
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
@@ -110,13 +127,16 @@
     <section class="section pt-3 pb-3">
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
-            <h3 class="h3 heading">Brief / Concept</h3>
-            <p>This video was made for an invitation to participate in Sarva Samvriddhi Naga Pratishtha that took place on October 9 at the Isha Yoga Center in Bengaluru, India.</p>
-            <p>Sadhguru consecrated a Naga deity during the Sarva Samvriddhi Naga Pratishtha, providing an unparalleled opportunity to experience mystical dimensions. It was a once-in-a-lifetime opportunity to participate in the esoteric Yogic process of Pratishtha, typically only shared with closed groups of people.</p>
+          <h3 class="h3 heading">Brief / Concept</h3>
+          <p>This video was made for an invitation to participate in Sarva Samvriddhi Naga Pratishtha that took place on
+            October 9 at the Isha Yoga Center in Bengaluru, India.</p>
+          <p>Sadhguru consecrated a Naga deity during the Sarva Samvriddhi Naga Pratishtha, providing an unparalleled
+            opportunity to experience mystical dimensions. It was a once-in-a-lifetime opportunity to participate in the
+            esoteric Yogic process of Pratishtha, typically only shared with closed groups of people.</p>
         </div>
       </div>
     </section><!-- End Brief Concept Section -->
-    
+
     <!-- ======= Previous/Next Section ======= -->
     <div class="container py-2 py-md-5">
       <div class="row">
@@ -151,7 +171,8 @@
     </div>
   </footer>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="/assets/vendor/aos/aos.js"></script>
