--- a/video/project-2/index.html
+++ b/video/project-2/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PZ2RYEKKDL"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-PZ2RYEKKDL');
+  </script>
+
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -14,7 +24,9 @@
   <link href="/assets/img/logo-nk-touch-icon.webp" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=https://fonts.googleapis.com/css?family=Inconsolata:400,500,600,700|Raleway:400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="/assets/vendor/aos/aos.css" rel="stylesheet">
@@ -42,7 +54,8 @@
       <div class="row">
         <div class="col-md-5 d-none d-md-block">
           <h3>Hire Me</h3>
-          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe, storyboard/sketches, NDA)<br><a href="mailto:navinkrworks@gmail.com">navinkrworks@gmail.com</a></p>
+          <p>Get a faster response by sending detailed information upfront.(e.g. client, budget, timeframe,
+            storyboard/sketches, NDA)<br><a href="mailto:navinkrworks@gmail.com">navinkrworks@gmail.com</a></p>
         </div>
         <div class="col-md-7">
           <ul class="custom-menu">
@@ -56,13 +69,13 @@
 
   <nav class="navbar navbar-light custom-navbar">
     <div class="container">
-        <div class="navbar-brand">
-          <a href="/">
+      <div class="navbar-brand">
+        <a href="/">
           <img class="logo" src="/assets/img/logo-nk.webp"></a>
-        </div>
-        <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
-          <span></span>
-        </a>
+      </div>
+      <a href="#" class="burger" data-bs-toggle="collapse" data-bs-target="#main-navbar">
+        <span></span>
+      </a>
     </div>
   </nav>
 
@@ -73,7 +86,8 @@
         <div class="row mb-4 align-items-center">
           <div class="" data-aos="fade-up">
             <h2>How Tantra Uses The Power of Dreams</h2>
-            <p>Sadhguru delves into the nature of dreams, and how they are used in Tantra to manifest creation in miraculous ways.</p>
+            <p>Sadhguru delves into the nature of dreams, and how they are used in Tantra to manifest creation in
+              miraculous ways.</p>
           </div>
         </div>
       </div>
@@ -83,7 +97,10 @@
           <div class="row align-items-stretch">
             <div class="col-md-8" data-aos="fade-up" id="video1">
               <div class="video-container">
-                <iframe width="640" height="564" src="https://www.youtube.com/embed/NugylPBZuyM?si=YBbBUnZEJ-yVr2-H" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="640" height="564" src="https://www.youtube.com/embed/NugylPBZuyM?si=YBbBUnZEJ-yVr2-H"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  allowfullscreen></iframe>
               </div>
             </div>
             <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
@@ -105,18 +122,21 @@
           </div>
         </div>
     </section><!-- End Overview Section -->
-    
+
 
     <!-- ======= Brief Concept Section ======= -->
     <section class="section pt-3 pb-3">
       <div class="container" data-aos="fade-up">
         <div class="row align-items-end">
-            <h3 class="h3 heading">Brief / Concept</h3>
-            <p>In this video, Sadhguru describes how everything you perceive through your five sense organs is a dream on one level. It is relative, so that’s why we call it as ‘maya.’ This does not mean it doesn't exist, but rather, it is not perceived the way you experience things through your five sense organs. Its nature is different.</p>
+          <h3 class="h3 heading">Brief / Concept</h3>
+          <p>In this video, Sadhguru describes how everything you perceive through your five sense organs is a dream on
+            one level. It is relative, so that’s why we call it as ‘maya.’ This does not mean it doesn't exist, but
+            rather, it is not perceived the way you experience things through your five sense organs. Its nature is
+            different.</p>
         </div>
       </div>
     </section><!-- End Brief Concept Section -->
-    
+
 
     <!-- ======= Previous/Next Section ======= -->
     <div class="container py-2 py-md-5">
@@ -152,7 +172,8 @@
     </div>
   </footer>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="/assets/vendor/aos/aos.js"></script>
