--- a/about/index.html
+++ b/about/index.html
@@ -88,18 +88,15 @@
         <div class="row">
           <div class="col-md-6 order-2" data-aos="fade-up">
             <h2 class="greet">Namaskar!</h2>
-            <p>My name is Navin Kumar, an independent 2D Animator based in India. I love to bring inanimate objects to
-              life
-              with vibrant colors, shapes and motion.</p>
+            <p>My name is Navin Kumar, a 2D Animator based in India. I love to bring inanimate objects to
+              life with vibrant colors, shapes and motion.</p>
             <p>I help brands, creatives and small businesses to spice up their work with animated explainer videos,
-              short
-              commercial ads & storytelling videos.</p>
+              short commercial ads & storytelling videos. With a focus on the gaming industry, I also enhance game narratives and virtual worlds through dynamic animations that engage and immerse players.
+            </p>
             <p>As a passionate and motivated professional, I'm constantly striving to improve my techniques, expand my
               skillset and find new opportunities to grow. Each of my projects - both solo and collaborative - have
-              provided
-              this growth and allowed me to establish myself within this competitive industry. Please enjoy my
-              portfolio,
-              and feel free to get in touch with any questions.</p>
+              provided this growth and allowed me to establish myself within this competitive industry. Please enjoy my
+              portfolio, and feel free to get in touch with any questions.</p>
             <h3>Work with me:</h3>
             <p>Get a faster response by sending detailed information upfront.<br>(e.g. client, budget, timeframe,
               storyboards/sketches, NDA)</p>
