About Page Updated

--- a/about/index.html
+++ b/about/index.html
@@ -118,20 +118,27 @@
     <!-- ======= Clients Section ======= -->
     <section class="section pt-3 pb-5">
       <div class="container" data-aos="fade-up">
-        <div class="row align-items-end">
-          <h3 class="h3 heading">Selected Clients</h3>
-          <p>Blessed and grateful to work with some amazing clients - an experience that has added value to my career
-            and joy to my heart.<br>Here are some of them.</p>
+        <div class="row align-items-end mb-4">
+          <div class="col-12">
+            <h3 class="h3 heading">Selected Clients</h3>
+            <p>Blessed and grateful to work with some amazing clients - an experience that has added value to my career
+              and joy to my heart.<br>Here are some of them.</p>
+          </div>
         </div>
-        <div class="row">
-          <div class="col-4 col-sm-4 col-md-2">
+        <div class="row" id="logo_section">
+          <div class="col-6 col-sm-4 col-md-2 mb-3">
+            <a href="#" class="client-logo">
+              <h4>AppsForBharat</h4>
+            </a>
+          </div>
+          <div class="col-6 col-sm-4 col-md-2 mb-3">
             <a href="#" class="client-logo">
               <h4>Isha Foundation</h4>
             </a>
           </div>
-          <div class="col-4 col-sm-4 col-md-2">
+          <div class="col-6 col-sm-4 col-md-2 mb-3">
             <a href="#" class="client-logo">
-              <h4 class="test">Post Office Studios</h4>
+              <h4>Post Office Studios</h4>
             </a>
           </div>
         </div>
@@ -192,6 +199,16 @@
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 87%" aria-valuenow="87" aria-valuemin="0"
+                    aria-valuemax="100"></div>
+                </div>
+              </li>
+              <li class="mb-3">
+                <div class="d-flex mb-1">
+                  <strong>Spine Pro &nbsp</strong>
+                  <span class="ml-auto">77%</span>
+                </div>
+                <div class="progress custom-progress">
+                  <div class="progress-bar" role="progressbar" style="width: 77%" aria-valuenow="77" aria-valuemin="0"
                     aria-valuemax="100"></div>
                 </div>
               </li>
