--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <meta property="og:description" content="An independent 2D Animator based in India, loves to bring inanimate objects to
   life with vibrant colors, shapes and motion">
   <meta property="og:image" content="assets/img/logo-nk-favicon.webp">
+  <link rel="shortcut icon" href="assets/img/logo-nk-favicon.webp" type="image/x-icon" />
   <meta property="og:image:width" content="30">
   <meta property="og:image:height" content="40">
   <!-- <meta property="og:url" content="https://navinkr.com/"> -->
