--- a/about/index.html
+++ b/about/index.html
@@ -195,7 +195,7 @@
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>After Effects &nbsp</strong>
-                  <span class="ml-auto">87%</span>
+                  <!-- <span class="ml-auto">87%</span> -->
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 87%" aria-valuenow="87" aria-valuemin="0"
@@ -205,7 +205,7 @@
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>Spine Pro &nbsp</strong>
-                  <span class="ml-auto">77%</span>
+                  <!-- <span class="ml-auto">77%</span> -->
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 77%" aria-valuenow="77" aria-valuemin="0"
@@ -215,7 +215,7 @@
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>Illustrator &nbsp</strong>
-                  <span class="ml-auto">77%</span>
+                  <!-- <span class="ml-auto">77%</span> -->
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 77%" aria-valuenow="77" aria-valuemin="0"
@@ -225,7 +225,7 @@
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>Photoshop &nbsp</strong>
-                  <span class="ml-auto">71%</span>
+                  <!-- <span class="ml-auto">71%</span> -->
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 71%" aria-valuenow="71" aria-valuemin="0"
@@ -235,7 +235,7 @@
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>Blender &nbsp</strong>
-                  <span class="ml-auto">51%</span>
+                  <!-- <span class="ml-auto">51%</span> -->
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 51%" aria-valuenow="51" aria-valuemin="0"
@@ -245,7 +245,7 @@
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>Premiere Pro &nbsp</strong>
-                  <span class="ml-auto">85%</span>
+                  <!-- <span class="ml-auto">85%</span> -->
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
@@ -255,7 +255,7 @@
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>Davinci Resolve &nbsp</strong>
-                  <span class="ml-auto">77%</span>
+                  <!-- <span class="ml-auto">77%</span> -->
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 77%" aria-valuenow="77" aria-valuemin="0"
@@ -265,7 +265,7 @@
               <li class="mb-3">
                 <div class="d-flex mb-1">
                   <strong>Final Cut Pro &nbsp</strong>
-                  <span class="ml-auto">80%</span>
+                  <!-- <span class="ml-auto">80%</span> -->
                 </div>
                 <div class="progress custom-progress">
                   <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
