--- a/assets/unity/index.html
+++ b/assets/unity/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity Web Player | Anim-Test</title>
+    <title>Unity Web Player | Character Skinning</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-logo-title-footer"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Anim-Test</div>
+        <div id="unity-build-title">Character Skinning</div>
       </div>
     </div>
     <script>
@@ -60,7 +60,7 @@
         codeUrl: buildUrl + "/webBuild.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "Anim-Test",
+        productName: "Character Skinning",
         productVersion: "1.0",
         showBanner: unityShowBanner,
       };
