Unity Animation Link Fix

--- a/assets/unity/index.html
+++ b/assets/unity/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/webBuild.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/webBuild.data.br",
-        frameworkUrl: buildUrl + "/webBuild.framework.js.br",
-        codeUrl: buildUrl + "/webBuild.wasm.br",
+        dataUrl: buildUrl + "/webBuild.data",
+        frameworkUrl: buildUrl + "/webBuild.framework.js",
+        codeUrl: buildUrl + "/webBuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Character Skinning",
